--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 .App {
   background-color: #282c34;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   color: white;
 }
